@@ -1,7 +1,6 @@
 package backend.techeerzip.domain.event.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
@@ -21,6 +20,7 @@ import backend.techeerzip.domain.user.entity.User;
 import backend.techeerzip.domain.user.repository.UserRepository;
 import backend.techeerzip.global.logger.CustomLogger;
 import backend.techeerzip.infra.index.IndexEvent;
+import backend.techeerzip.infra.index.IndexType;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -61,7 +61,8 @@ public class EventService {
         Event savedEvent = eventRepository.save(event);
 
         eventPublisher.publishEvent(
-                new IndexEvent.Create<>("event", EventMapper.toIndexDto(savedEvent)));
+                new IndexEvent.Create<>(
+                        IndexType.EVENT.getLow(), EventMapper.toIndexDto(savedEvent)));
 
         logger.debug("이벤트 생성 완료 - eventId: {}", event.getId());
         return new EventCreateResponse(event);
@@ -78,8 +79,7 @@ public class EventService {
                         query.getCategory(),
                         query.getLimit());
 
-        List<EventResponse> eventResponses =
-                events.stream().map(EventResponse::new).collect(Collectors.toList());
+        List<EventResponse> eventResponses = events.stream().map(EventResponse::new).toList();
 
         logger.debug("이벤트 목록 조회 완료 - 조회된 개수: {} | context: {}", eventResponses.size(), CONTEXT);
         return new EventListResponse(eventResponses, query.getLimit());
@@ -145,7 +145,8 @@ public class EventService {
         Event updatedEvent = eventRepository.save(event);
 
         eventPublisher.publishEvent(
-                new IndexEvent.Create<>("event", EventMapper.toIndexDto(updatedEvent)));
+                new IndexEvent.Create<>(
+                        IndexType.EVENT.getLow(), EventMapper.toIndexDto(updatedEvent)));
 
         logger.debug("이벤트 수정 완료 - eventId: {} | context: {}", eventId, CONTEXT);
         return new EventCreateResponse(event);
@@ -177,7 +178,7 @@ public class EventService {
         }
 
         event.delete();
-        eventPublisher.publishEvent(new IndexEvent.Delete("event", eventId));
+        eventPublisher.publishEvent(new IndexEvent.Delete(IndexType.EVENT.getLow(), eventId));
 
         logger.debug("이벤트 삭제 완료 - eventId: {} | context: {}", eventId, CONTEXT);
     }
